--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun vite dev --port 3000",
+    "dev": "bunx --bun vite dev --port 3000 --host",
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest run",
@@ -44,6 +44,9 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@restatedev/restate-sdk": "^1.9.1",
+    "@restatedev/restate-sdk-clients": "^1.9.1",
+    "@restatedev/restate-sdk-zod": "^1.9.1",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-form": "^1.23.8",
